# llama-lora

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.gemini/: settings.json
.kiro/specs/vllm-integration/: requirements.md
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/memories/: architecture_overview.md  code_style_and_conventions.md  code_style_conventions.md  darwin_system_info.md  llama_lora_architecture.md  project_overview.md  project_structure.md  suggested_commands.md  system_specific_notes.md  task_completion_workflow.md  tech_stack.md
config/: config-a40-extreme.yaml  config-a40-optimized.yaml  config-a40-quality.yaml  config-a40-quantized.yaml  config-a40-ultimate.yaml  config.yaml  schema.py
config/experiment/: default-dora.yaml  default-full.yaml  default-quick.yaml  default.yaml  dora_experiment.yaml  full_training.yaml  quick_test.yaml
config/inference/: base.yaml  latest.yaml  manual.yaml
docs/: HYDRA_USAGE.md  IMPROVEMENTS.md
examples/: qwen-lvlm.ipynb  tiny-llama-dora-test.ipynb
outputs/2025-08-10/20-47-37/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-08-10/20-48-34/.hydra/: hydra.yaml
outputs/2025-08-10/20-48-57/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-10/20-49-19/.hydra/: hydra.yaml
scripts/: baseline_inference.py  config.py  infer.py  merge.py  train.py
src/llama_lora/: baseline.py  experiment.py  infer.py  merge.py  train.py  validate.py
src/llama_lora/utils/: common.py  errors.py  exceptions.py  results.py  storage.py
tests/: __init__.py  test_atomic_operations.py  test_config_validation.py  test_error_handling.py  test_inference_logging.py  test_output_config_integration.py  test_path_manager.py  test_path_manager_enhanced.py  test_tokenizer_utils.py  test_unified_config_system.py
